# product-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  product_scraper.py  pyproject.toml  utils.py
tests/: test_product_scraper.py
